test/Parse/actor.code
// RUN: %target-typecheck-verify-language -target %target-language-5.1-abi-triple

// REQUIRES: concurrency



actor MyActor1 // expected-error {{expected '{' in actor}}

actor MyActor2 { // expected-note@:16 {{to match this opening '{'}}
    init() {
    }
fn hello() { } // expected-error@+1 {{expected '}' in actor}}
